# picnic_dws

./: .gitignore  README.md  transform.ipynb
data/input/: articles.tsv  consumer_units.tsv  temperature_zone.tsv  trade_units.tsv
data/output/: base.db  wms_load.tsv
pywms/: pyproject.toml
pywms/src/: app.py
pywms/src/db/: loader.py
pywms/src/wms/: __init__.py  aggregaor.py  aggregator.py
pywms/tests/: test_wms.py
