[tool.poetry]
name = "wms"
version = "0.1.0"
description = ""
authors = ["Alexmadeanotherone"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
aiofiles = "0.6.0"
hashids = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app:get_output"